tests/snapshots/prompt_snapshots__assigner_mode_performance.snap
---
source: tests/prompt_snapshots.rs
assertion_line: 246
expression: output
---
## Assignment Mode Context

- **Run mode:** 0.15
- **Effective exploration rate:** 0.15
- **Assignment path:** Performance (cache-first)
- **Total assignments:** 42

### Cached Agents (ranked by fit)

- Builder-QualityFirst (score: 0.92)
- Coder-FastShip (score: 0.78)

Deploy the highest-scoring cached agent if its score meets the threshold.
Do NOT vary composition dimensions — deterministic selection only.
