tests/snapshots/prompt_snapshots__assigner_mode_performance_no_cache.snap
---
source: tests/prompt_snapshots.rs
assertion_line: 260
expression: output
---
## Assignment Mode Context

- **Run mode:** 0.10
- **Effective exploration rate:** 0.10
- **Assignment path:** Performance (cache-first)
- **Total assignments:** 5

### Cache Status

No cached agents available. Use best-guess composition.
