tests/snapshots/prompt_snapshots__build_prompt_clean.snap
---
source: tests/prompt_snapshots.rs
assertion_line: 325
expression: output
---
# Task Assignment

You are an AI agent working on a task in a WG project.


## Agent Identity

You are a Builder agent.

## Your Task
- **ID:** test-task-123
- **Title:** Implement widget factory
- **Description:** Build a widget factory that produces widgets from specs.

## Completion Preflight

- Run configured validation exactly as listed.

## Worker Control

- **Effective mode:** `trusted`
- **Restrictions:** normal local graph coordination is allowed

## Context from Dependencies
From prerequisite-task: Widget spec is defined in docs/spec.md

Begin working on the task now.
